# tinyxml

./: meson.build  submodules.txt
src/: deparser.cpp  meson.build  parser.cpp  string-reader  string-reader.hpp  test.cpp  xml.cpp  xml.hpp
